--- a/index.html
+++ b/index.html
@@ -18,11 +18,51 @@
     </nav>
   </header>
   <body>
-    <div class="mission">
-      <div class="midpic">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-      </div>
+    <div class="mission" id="mission">
+        <h2 id="ourmission">Our Mission</h2>
+        <h4 id="missionbrief">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
+    <div class="monthtea" id="featuredtea">
+        <h2 id=ofthemonth>Tea of the Month</h2>
+        <h4 id="monthbrief">What's Steeping at the Tea Cozy?</h4>
+        <div class="teas" id="wrap">
+           <div class="teaimg" id="img1"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"><h2>Fall Berry Blitz Tea</h2></div>
+           <div class="teaimg" id="img2"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg"><h2>Spiced Rum Tea</h2></div>
+           <div class="teaimg" id="img3"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"><h2>Seasonal Donuts</h2></div>
+           <div class="teaimg" id="img4"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg"><h2>Myrtle Ave Tea</h2></div>
+           <div class="teaimg" id="img5"><img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"><h2>Bedford Bizarre Tea</h2></div>
+        </div>
+    </div>
+    <div class="location" id="locations">
+      <h2 id="mainheading">Locations</h2>
+      <div class="lists">
+        <div class="list" id="left">
+            <h3 class="bold">Downtown</h3>
+            <h3 class="address">384 West 4th St</h3>
+            <h3 class="address">Suite 108</h3>
+            <h3 class="address">Portland, Maine</h3>
+        </div>
+        <div class="list" id="mid">
+            <h3 class="bold">East Bayside</h3>
+            <h3 class="address">3433 Phisherman's Avenue</h3>
+            <h3 class="address">(Northwest Corner)</h3>
+            <h3 class="address">Portland, Maine</h3>
+        </div>
+        <div class="list" id="right">
+            <h3 class="bold">Oakdale</h3>
+            <h3 class="address">515 Crescent Avenue</h3>
+            <h3 class="address">Second Floor</h3>
+            <h3 class="address">Portland, Maine</h3>
+        </div>
+     </div>
+   </div>
+   <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+   </div>
   </body>
+  <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+  </footer>
 </html>
